[package]
name = "ic_eth_recover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
reqwest = "0.11.4"
serde = "1.0.99"
serde_json = "1.0.68"
serde_bytes = "0.11"
hex = "0.4.3"
elliptic-curve = { version = "0.11.5", default-features = false }
generic-array = { version = "0.14.4", default-features = false }
k256 = { version = "0.9.5", default-features = false, features = ["keccak256", "ecdsa", "zeroize"] }
tiny-keccak = { version = "2.0.2",  features = ["keccak"] }